# grpc-polyglot

./: .gitignore  AGENTS.md  WARP.md  protoc-http-requirements.md
protoc-adapter-py/: README.md  main.py  pyproject.toml  software_spec.md
protoc-adapter-py/sample/: advanced_service.proto  advanced_types.h  rep_service.proto  rep_types.h  trade_service.proto  trade_types.h
protoc-adapter-py/src/protoc_adapter/: __main__.py  main.py  matcher.py  models.py  rep_message_handler.py
protoc-adapter-py/tests/: test_cpp_parser.py  test_dto_generator.py  test_integration.py  test_mapper_generator.py  test_mapstruct_generator.py  test_matcher.py  test_proto_parser.py  test_rep_message_handler.py
protoc-http-rs/: Cargo.toml  README.md
protoc-http-rs/.junie/: guidelines.md
protoc-http-rs/proto/simple/: helloworld.proto
protoc-http-rs/proto/test_special_cases/: test_msghdr.proto  test_n2_kebab.proto  test_namespace_nopackage.proto  test_namespace_priority.proto
protoc-http-rs/src/: codegen.rs  error.rs  json_schema_codegen.rs  main.rs  parser.rs  types.rs  utils.rs  vb_codegen.rs
protoc-http-rs/test_output/: helloworld.vb
protoc-http-rs/test_output/json/: helloworld.json
protoc-http-rs/test_output_compat_modes/: helloworld.vb  helloworld_net40hwr.vb  helloworld_net45.vb  test_versioned.vb
protoc-http-rs/test_output_compat_modes/complex/: common.vb  stock-service.vb  user-service.vb
protoc-http-rs/test_output_compat_modes/complex_net40hwr/: nested.vb  stock-service.vb  user-service.vb
protoc-http-rs/test_output_complex_final/: common.vb  stock-service.vb  user-service.vb
protoc-http-rs/test_output_examples/: README.md
protoc-http-rs/test_output_examples/net40hwr/: helloworld.vb  stock-service.vb  user-service.vb
protoc-http-rs/test_output_examples/net45/: common.vb  stock-service.vb  user-service.vb
protoc-http-rs/test_output_examples/versioning/: test_versioned_demo.vb
protoc-http-rs/test_output_fixed/: helloworld.vb
protoc-http-rs/tests/: integration_tests.rs  test_special_cases.rs
protoc-http-rs/tests/output/: helloworld.vb
protoc-http-rs/tests/output_complex/: DemoNestedHttpUtility.vb  common.vb  nested.vb  stock-service.vb  user-service.vb
protoc-http-rs/tests/output_n2/: test_n2_kebab.vb
(+370 files in other folders)
