[package]
name = "protoc-http-rs"
version = "0.1.0"
edition = "2021"
description = "Generate VB.NET HTTP proxy client and DTOs from .proto files (unary RPCs only)"

[dependencies]
regex = "1.0"
clap = { version = "4.0", features = ["derive"] }
walkdir = "2.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indoc = "2.0"
once_cell = "1.0"
derive_builder = "0.20"

[dev-dependencies]
tempfile = "3.0"
