[package]
name = "rust-grpc-server"
version = "2.0.0"
edition = "2021"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }
tokio-stream = "0.1"
prometheus = "0.13"
lazy_static = "1.4"
scopeguard = "1.2"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "server"] }
http-body-util = "0.1"
tower = "0.4"

[build-dependencies]
tonic-build = "0.12"

[[bin]]
name = "server"
path = "src/main.rs"
